[tool.poetry]
name = "demo-data-storyteller"
version = "0.1.0"
description = ""
authors = ["jiab-Datacafe <jiab.ps@datacafe@com>"]
license = "mit"
readme = "README.md"
packages = [{include = "demo_data_storyteller"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
scikit-learn = "0.24.2"
pandas = "^1.5.3"
streamlit = "^1.13.0"
matplotlib = "3.7.0"
seaborn = "0.12.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
